# Dice-Roller

./: .gitignore  .pre-commit-config.yaml  README.md  evaluator.py  grammar.lark  main.py  pyproject.toml  readme.md  requirements.txt
src/dice_roller/: __init__.py  cli.py  evaluator.py  grammar.lark  parser.py  simulation.py  tui.py
tests/: test_properties.py
