[project]
name = "dice-roller"
version = "0.1.0"
description = "Parser and evaluator for dice notation"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "colorama",
    "lark",
    "numpy",
]

[project.scripts]
dice-roller = "dice_roller.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"
