[project]
name = "dice-roller"
version = "0.1.0"
description = "Parser and evaluator for dice notation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark==1.3.1",
    "numpy==2.5.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
]

[project.optional-dependencies]
cli = [
    "colorama==0.4.6",
]

[project.scripts]
dice-roller = "dice_roller.cli:main"

[build-system]
requires = ["uv_build==0.11.17"]
build-backend = "uv_build"
