[project]
name = "dice-roller"
version = "0.1.0"
description = "Parser and evaluator for dice notation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark==1.3.1",
    "numpy==2.5.1",
]

[dependency-groups]
dev = [
    "hypothesis==6.148.2",
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pytest==9.0.2",
    "types-colorama==0.4.15.20250801",
]

[project.optional-dependencies]
cli = [
    "colorama==0.4.6",
]
tui = [
    "textual==8.2.5",
]

[project.scripts]
dice-roller = "dice_roller.cli:main"
dice-roller-tui = "dice_roller.tui:main"

[build-system]
requires = ["uv_build==0.11.17"]
build-backend = "uv_build"

[tool.mypy]
files = ["src", "tests", "main.py"]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
